Added the author name

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>HTML Cheat Sheet</title>
 </head>
 <body>
-    
+    <!-- Created by Hafizullah Rasa -->
+	<h1 class="title">HTML Cheat Sheet</h1>
+	<table>
+		<tr>
+			<th>Full Name</th>
+		</tr>
+		<tr>
+			<td class="details">Hafizullah Rasa</td>
+		</tr>
+	</table>
 </body>
 </html>
