Added table headers

--- a/index.html
+++ b/index.html
@@ -18,5 +18,23 @@
 			<td class="details">Hafizullah Rasa</td>
 		</tr>
 	</table>
+    <table>
+        <tr>
+			<th>Number</th>
+			<th>Tag</th>
+			<th>Attribute(s)</th>
+			<th>Value or Description</th>
+			<th>Code</th>
+			<th>Output</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>&lt;html&gt;</td>
+			<td></td>
+			<td></td>
+			<td>&lt;html&gt;...&lt;/html&gt;</td>
+			<td><!DOCTYPE html><html>...content...</html></td>
+		</tr>
+    </table>
 </body>
 </html>
