Added new items into table

--- a/index.html
+++ b/index.html
@@ -35,6 +35,78 @@
 			<td>&lt;html&gt;...&lt;/html&gt;</td>
 			<td><!DOCTYPE html><html>...content...</html></td>
 		</tr>
+        <tr>
+			<td>2</td>
+			<td>&lt;head&gt;</td>
+			<td></td>
+			<td></td>
+			<td>&lt;head&gt;...&lt;/head&gt;</td>
+			<td>Contains metadata about the document</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>&lt;title&gt;</td>
+			<td></td>
+			<td>Page Title</td>
+			<td>&lt;title&gt;Page Title&lt;/title&gt;</td>
+			<td>Page Title</td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>&lt;body&gt;</td>
+			<td></td>
+			<td></td>
+			<td>&lt;body&gt;...&lt;/body&gt;</td>
+			<td>Contains the visible content of the document</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>&lt;!doctype&gt;</td>
+			<td></td>
+			<td></td>
+			<td>&lt;!doctype html&gt;</td>
+			<td>HTML5 document type declaration</td>
+		</tr>
+		<tr>
+			<td>6</td>
+			<td>&lt;!--...--&gt;</td>
+			<td></td>
+			<td>Comment text</td>
+			<td>&lt;!-- Comment text --&gt;</td>
+			<td><em>(no visible output)</em></td>
+		</tr>
+		<tr>
+			<td>7</td>
+			<td>&lt;h1&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h1&gt;Heading Text&lt;/h1&gt;</td>
+			<td><h1>Heading Text</h1></td>
+		</tr>
+		<tr>
+			<td>8</td>
+			<td>&lt;h2&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h2&gt;Heading Text&lt;/h2&gt;</td>
+			<td><h2>Heading Text</h2></td>
+		</tr>
+		<tr>
+			<td>9</td>
+			<td>&lt;h3&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h3&gt;Heading Text&lt;/h3&gt;</td>
+			<td><h3>Heading Text</h3></td>
+		</tr>
+		<tr>
+			<td>10</td>
+			<td>&lt;h4&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h4&gt;Heading Text&lt;/h4&gt;</td>
+			<td><h4>Heading Text</h4></td>
+		</tr>
     </table>
 </body>
 </html>
