Added items numbers 11 to 20

--- a/index.html
+++ b/index.html
@@ -107,6 +107,110 @@
 			<td>&lt;h4&gt;Heading Text&lt;/h4&gt;</td>
 			<td><h4>Heading Text</h4></td>
 		</tr>
+        <tr>
+			<td>11</td>
+			<td>&lt;h5&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h5&gt;Heading Text&lt;/h5&gt;</td>
+			<td><h5>Heading Text</h5></td>
+		</tr>
+		<tr>
+			<td>12</td>
+			<td>&lt;h6&gt;</td>
+			<td></td>
+			<td>Heading Text</td>
+			<td>&lt;h6&gt;Heading Text&lt;/h6&gt;</td>
+			<td><h6>Heading Text</h6></td>
+		</tr>
+		<tr>
+			<td>13</td>
+			<td>&lt;p&gt;</td>
+			<td>class, id, style, title</td>
+			<td>Paragraph Text</td>
+			<td>&lt;p&gt;Paragraph Text&lt;/p&gt;</td>
+			<td><p>Paragraph Text</p></td>
+		</tr>
+		<tr>
+			<td>14</td>
+			<td>&lt;a&gt;</td>
+			<td>href,
+				target,
+				download,
+				rel,
+				hreflang,
+				type,
+				media,
+				class,
+				id,
+				style,
+				title,
+				tabindex,
+				accesskey,
+				contented,
+				draggable,
+				hidden,
+				lang,
+				spellcheck,
+				translate</td>
+			<td>URL</td>
+			<td>&lt;a href="URL"&gt;Link Text&lt;/a&gt;</td>
+			<td><a href="https://www.example.com">Link Text</a></td>
+		</tr>
+		<tr>
+			<td>15</td>
+			<td>&lt;address&gt;</td>
+			<td></td>
+			<td>Address information</td>
+			<td>&lt;address&gt;Address information&lt;/address&gt;</td>
+			<td><address>Address information</address></td>
+		</tr>
+		<tr>
+			<td>16</td>
+			<td>&lt;acronym&gt;</td>
+			<td>title</td>
+			<td>Acronym text</td>
+			<td>&lt;acronym title="Title text"&gt;Acronym text&lt;/acronym&gt;</td>
+			<td><acronym title="Title text">Acronym text</acronym></td>
+		</tr>
+		<tr>
+			<td>17</td>
+			<td>&lt;abbr&gt;</td>
+			<td>title</td>
+			<td>Abbreviation text</td>
+			<td>&lt;abbr title="Title text"&gt;Abbreviation text&lt;/abbr&gt;</td>
+			<td><abbr title="Title text">Abbreviation text</abbr></td>
+		</tr>
+		<tr>
+			<td>18</td>
+			<td>&lt;audio&gt;</td>
+			<td>autoplay,
+				controls,
+				crossorigin,
+				loop,
+				muted,
+				preload,
+				src</td>
+			<td>Audio file URL</td>
+			<td>&lt;audio src="audio_file.mp3" controls&gt;&lt;/audio&gt;</td>
+			<td><audio src="audio_file.mp3" controls></audio></td>
+		</tr>
+		<tr>
+			<td>19</td>
+			<td>&lt;article&gt;</td>
+			<td></td>
+			<td>Article content</td>
+			<td>&lt;article&gt;Article content&lt;/article&gt;</td>
+			<td><article>Article content</article></td>
+		</tr>
+		<tr>
+			<td>20</td>
+			<td>&lt;aside&gt;</td>
+			<td></td>
+			<td>Aside content</td>
+			<td>&lt;aside&gt;Aside content&lt;/aside&gt;</td>
+			<td><aside>Aside content</aside></td>
+		</tr>
     </table>
 </body>
 </html>
