Added items number 41 to 50

--- a/index.html
+++ b/index.html
@@ -482,6 +482,110 @@
 			<td>&lt;div id="example" class="example" style="color: blue;" title="Example"&gt;Block-level container&lt;/div&gt;</td>
 			<td><div id="example" class="example" style="color: blue;" title="Example">Block-level container</div></td>
 		  </tr>
+          <tr>
+			<td>41</td>
+			<td>&lt;dialog&gt;</td>
+			<td>open</td>
+			<td>Modal dialog box</td>
+			<td>
+			  &lt;dialog id="dialog-box"&gt;<br>
+			  &nbsp;&nbsp;&lt;p&gt;Dialog box content&lt;/p&gt;<br>
+			  &lt;/dialog&gt;<br>
+			  &lt;button onclick="document.getElementById('dialog-box').showModal()"&gt;Open dialog&lt;/button&gt;
+			</td>
+			<td>
+			  <dialog id="dialog-box">
+				<p>Dialog box content</p>
+			  </dialog>
+			  <button onclick="document.getElementById('dialog-box').showModal()">Open dialog</button>
+			</td>
+		  </tr>
+		  <tr>
+			<td>42</td>
+			<td>&lt;dir&gt;</td>
+			<td>N/A</td>
+			<td>Directory list</td>
+			<td>
+			  &lt;dir&gt;<br>
+			  &nbsp;&nbsp;&lt;li&gt;List item 1&lt;/li&gt;<br>
+			  &nbsp;&nbsp;&lt;li&gt;List item 2&lt;/li&gt;<br>
+			  &lt;/dir&gt;
+			</td>
+			</tr>
+			<tr>
+				<td>43</td>
+				<td>&lt;figcaption&gt;</td>
+				<td>id, class, style, title</td>
+				<td>Text or other HTML elements</td>
+				<td>&lt;figure&gt;<br> &lt;img src="image.jpg" alt="Image description"&gt;<br> &lt;figcaption&gt;Image Caption&lt;/figcaption&gt;<br> &lt;/figure&gt;</td>
+				<td><figure><img src="download.jpeg" alt="KU image"><figcaption>Image Caption</figcaption></figure></td>
+			  </tr>
+			  <tr>
+				<td>44</td>
+				<td>&lt;figure&gt;</td>
+				<td>id, class, style, title</td>
+				<td>Content, such as images or text</td>
+				<td>&lt;figure&gt;<br> &lt;img src="image.jpg" alt="Image description"&gt;<br> &lt;figcaption&gt;Image Caption&lt;/figcaption&gt;<br> &lt;/figure&gt;</td>
+				<td><figure><img src="download.jpeg" alt="KU image"><figcaption>Figure caption</figcaption></figure></td>
+			  </tr>
+			  <tr>
+				<td>45</td>
+				<td>&lt;footer&gt;</td>
+				<td>id, class, style, title</td>
+				<td>Text or other HTML elements</td>
+				<td>&lt;footer&gt;<br> &amp;copy; 2023 Company Name<br> &lt;/footer&gt;</td>
+				<td><footer>&copy; 2023 Company Name</footer></td>
+			  </tr>
+			  <tr>
+				<td>46</td>
+				<td>&lt;form&gt;</td>
+				<td>id, class, style, title, action, method, target, enctype, autocomplete, novalidate, accept-charset, accesskey</td>
+				<td>Input elements and submit button</td>
+				<td>&lt;form action="/submit-form" method="post"&gt;<br> First name: &lt;input type="text" name="fname"&gt;&lt;br&gt;<br> Last name: &lt;input type="text" name="lname"&gt;&lt;br&gt;<br> &lt;input type="submit" value="Submit"&gt;<br> &lt;/form&gt;</td>
+				<td><form action="/submit-form" method="post">First name: <input type="text" name="fname"><br> Last name: <input type="text" name="lname"><br> <input type="submit" value="Submit"></form></td>
+			  </tr>
+			  <tr>
+				<td>47</td>
+				<td>&lt;header&gt;</td>
+				<td>align,
+					class,
+					dir,
+					hidden,
+					id,
+					lang,
+					style,
+					tabindex,
+					title
+					</td>
+				<td>Content that defines a page or a section header.</td>
+				<td>&lt;header&gt;This is the header&lt;/header&gt;</td>
+				<td><header>This is the header</header></td>
+			</tr>
+			<tr>
+				<td>48</td>
+				<td>&lt;hr&gt;</td>
+				<td>
+				</td>
+				<td>Defines a thematic break in an HTML page.</td>
+				<td>&lt;hr&gt;</td>
+				<td><hr></td>
+			</tr>
+			<tr>
+				<td>49</td>
+				<td>&lt;html&gt;</td>
+				<td>lang</td>
+				<td>Defines the root element of an HTML page.</td>
+				<td>&lt;html lang="en"&gt;&lt;/html&gt;</td>
+				<td>The HTML code for the page.</td>
+			</tr>
+			<tr>
+				<td>50</td>
+				<td>&lt;i&gt;</td>
+				<td></td>
+				<td>Defines a section of text that is set off from the normal text.</td>
+				<td>&lt;i&gt;This text is italicized&lt;/i&gt;</td>
+				<td><i>This text is italicized</i></td>
+			</tr>
     </table>
 </body>
 </html>
