Added items number 51 to 60

--- a/index.html
+++ b/index.html
@@ -586,6 +586,152 @@
 				<td>&lt;i&gt;This text is italicized&lt;/i&gt;</td>
 				<td><i>This text is italicized</i></td>
 			</tr>
+            <tr>
+				<td>51</td>
+				<td>&lt;iframe&gt;</td>
+				<td>
+					allow,
+					allowfullscreen,
+					allowpaymentrequest,
+					frameborder,
+					height,
+					loading,
+					name,
+					referrerpolicy,
+					sandbox,
+					src,
+					srcdoc,
+					width,
+					importance,
+					loading
+				</td>
+				<td>Used to embed another HTML document within the current HTML document.</td>
+				<td>&lt;iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"  allowfullscreen&gt;&lt;/iframe&gt;</td>
+				<td><iframe src="https://www.youtube.com/embed/"  allowfullscreen></iframe></td>
+			</tr>
+			<tr>
+				<td>52</td>
+				<td>&lt;input&gt;</td>
+				<td>accept,
+					accept-charset,
+					accesskey,
+					alt,
+					autocomplete,
+					autofocus,
+					checked,
+					dirname,
+					disabled,
+					form,
+					formaction,
+					formenctype,
+					formmethod,
+					formnovalidate,
+					formtarget,
+					height,
+					hidden,
+					id,
+					inputmode,
+					ismap,
+					list,
+					max,
+					maxlength,
+					min,
+					minlength,
+					multiple,
+					name,
+					pattern,
+					placeholder,
+					readonly,
+					required,
+					size,
+					src,
+					step,
+					tabindex,
+					title,
+					type,
+					value,
+					width</td>
+				<td>Specifies an input field where the user can enter data</td>
+				<td>&lt;input type="text" name="firstname"&gt;</td>
+				<td><input type="text" name="firstname"></td>
+			  </tr>
+			  <tr>
+				<td>53</td>
+				<td>&lt;ins&gt;</td>
+				<td>datetime</td>
+				<td>Defines inserted text</td>
+				<td>&lt;p&gt;This is an &lt;ins datetime="2023-04-29"&gt;inserted&lt;/ins&gt; word.&lt;/p&gt;</td>
+				<td><p>This is an <ins datetime="2023-04-29">inserted</ins> word.</p></td>
+			  </tr>
+			  <tr>
+				<td>54</td>
+				<td>&lt;label&gt;</td>
+				<td>accesskey,
+					for,
+					form,
+					name</td>
+				<td>Defines a label for an input element</td>
+				<td>&lt;label for="firstname"&gt;First name:&lt;/label&gt;
+				&lt;input type="text" id="firstname" name="firstname"&gt;</td>
+				<td><label for="firstname">First name:</label>
+				<input type="text" id="firstname" name="firstname"></td>
+			  </tr>
+			  <tr>
+				<td>55</td>
+				<td>&lt;li&gt;</td>
+				<td>value</td>
+				<td>Defines a list item</td>
+				<td>&lt;ul&gt;
+				  &lt;li&gt;Coffee&lt;/li&gt;
+				  &lt;li&gt;Tea&lt;/li&gt;
+				  &lt;li value="3"&gt;Milk&lt;/li&gt;
+				&lt;/ul&gt;</td>
+				<td><ul>
+				  <li>Coffee</li>
+				  <li>Tea</li>
+				  <li value="3">Milk</li>
+				</ul></td>
+			  </tr>
+			  <tr>
+				<td>56</td>
+				<td>&lt;map&gt;</td>
+				<td>name</td>
+				<td>string</td>
+				<td>&lt;img src="example.jpg" alt="example" usemap="#example"&gt;&lt;map name="example"&gt;&lt;area shape="rect" coords="0,0,100,100" href="#"&gt;&lt;/map&gt;</td>
+				<td><img src="download.jpeg" alt="KU image" usemap="#example"><map name="example"><area shape="rect" coords="0,0,100,100" href="#"></map></td>
+			  </tr>
+			  <tr>
+				<td>57</td>
+				<td>&lt;mark&gt;</td>
+				<td>N/A</td>
+				<td>N/A</td>
+				<td>&lt;p&gt;This text is &lt;mark&gt;highlighted&lt;/mark&gt;.&lt;/p&gt;</td>
+				<td><p>This text is <mark>highlighted</mark>.</p></td>
+			  </tr>
+			  <tr>
+				<td>58</td>
+				<td>&lt;meta&gt;</td>
+				<td>name, content</td>
+				<td>string</td>
+				<td>&lt;meta name="description" content="This is a description."&gt;</td>
+				<td>N/A</td>
+			  </tr>
+			  <tr>
+				<td>59</td>
+				<td>&lt;meter&gt;</td>
+				<td>value, min, max</td>
+				<td>number</td>
+				<td>&lt;meter value="60" min="0" max="100"&gt;60/100&lt;/meter&gt;</td>
+				<td><meter value="60" min="0" max="100">60/100</meter></td>
+			  </tr>
+			  <tr>
+				<td>60</td>
+				<td>&lt;nav&gt;</td>
+				<td>N/A</td>
+				<td>N/A</td>
+				<td>&lt;nav&gt;&lt;a href="#"&gt;Link 1&lt;/a&gt;&lt;a href="#"&gt;Link 2&lt;/a&gt;&lt;/nav&gt;</td>
+				<td><nav><a href="#">Link 1</a><a href="#">Link 2</a></nav></td>
+			  </tr>
     </table>
 </body>
 </html>
