Added items number 61 to 70

--- a/index.html
+++ b/index.html
@@ -732,6 +732,98 @@
 				<td>&lt;nav&gt;&lt;a href="#"&gt;Link 1&lt;/a&gt;&lt;a href="#"&gt;Link 2&lt;/a&gt;&lt;/nav&gt;</td>
 				<td><nav><a href="#">Link 1</a><a href="#">Link 2</a></nav></td>
 			  </tr>
+              <tr>
+				<td>61</td>
+				<td>&lt;object&gt;</td>
+				<td>data, type, width, height, name, usemap, form, class, style, id, tabindex, title, aria-label, aria-labelledby, role</td>
+				<td>Specifies the URL of the resource to be used by the object element. </td>
+				<td>&lt;object data="yourdatafile.xxx" width="" height=""&gt;&lt;/object&gt;</td>
+				<td><object data="yourdatafile.xxx" width="" height=""></object></td>
+			  </tr>
+			  <tr>
+				<td>62</td>
+				<td>&lt;ol&gt;</td>
+				<td>reversed, start, type, class, style, id, tabindex, title, aria-label, aria-labelledby, role</td>
+				<td>Defines an ordered list</td>
+				<td>&lt;ol&gt;<br>  &lt;li&gt;Item 1&lt;/li&gt;<br>  &lt;li&gt;Item 2&lt;/li&gt;<br>  &lt;li&gt;Item 3&lt;/li&gt;<br>&lt;/ol&gt;</td>
+				<td>
+				  <ol>
+					<li>Item 1</li>
+					<li>Item 2</li>
+					<li>Item 3</li>
+				  </ol>
+				</td>
+			  </tr>
+			  <tr>
+				<td>63</td>
+				<td>&lt;option&gt;</td>
+				<td>disabled, label, selected, value, class, style, id, tabindex, title, aria-label, aria-labelledby, role</td>
+				<td>Defines an option in a select element.</td>
+				<td>&lt;select&gt;<br>  &lt;option value="value1"&gt;Option 1&lt;/option&gt;<br>  &lt;option value="value2"&gt;Option 2&lt;/option&gt;<br>  &lt;option value="value3"&gt;Option 3&lt;/option&gt;<br>&lt;/select&gt;</td>
+				<td>
+				  <select>
+					<option value="value1">Option 1</option>
+					<option value="value2">Option 2</option>
+					<option value="value3">Option 3</option>
+				  </select>
+				</td>
+			  </tr>
+			  <tr>
+				<td>64</td>
+				<td>&lt;pre&gt;</td>
+				<td>N/A</td>
+				<td>Text</td>
+				<td>&lt;pre&gt;<br> &nbsp; &nbsp; This is a preformatted text.<br>&lt;/pre&gt;</td>
+				<td><pre>This is a preformatted text.</pre></td>
+			  </tr>
+			  <tr>
+				<td>65</td>
+				<td>&lt;progress&gt;</td>
+				<td>value<br>max</td>
+				<td>Number</td>
+				<td>&lt;progress value="50" max="100"&gt;&lt;/progress&gt;</td>
+				<td><progress value="50" max="100"></progress></td>
+			  </tr>
+			  <tr>
+				<td>66</td>
+				<td>&lt;q&gt;</td>
+				<td>N/A</td>
+				<td>Text</td>
+				<td>&lt;q&gt;This is a quoted text.&lt;/q&gt;</td>
+				<td><q>This is a quoted text.</q></td>
+			  </tr>
+			  <tr>
+				<td>67</td>
+				<td>&lt;rp&gt;</td>
+				<td></td>
+				<td>Annotation parentheses</td>
+				<td>&lt;p&gt;An abbreviation (&lt;abbr&gt;)&lt;rp&gt;( &lt;/rp&gt;&lt;rt&gt;abbr&lt;/rt&gt;&lt;rp&gt; )&lt;/rp&gt; is a shortened form of a word or phrase.&lt;/p&gt;</td>
+				<td>An abbreviation ()<sup>1</sup> is a shortened form of a word or phrase.</td>
+			  </tr>
+			  <tr>
+				<td>68</td>
+				<td>&lt;rt&gt;</td>
+				<td></td>
+				<td>Annotation text</td>
+				<td>&lt;p&gt;An abbreviation (&lt;abbr&gt;)&lt;rp&gt;( &lt;/rp&gt;&lt;rt&gt;abbr&lt;/rt&gt;&lt;rp&gt; )&lt;/rp&gt; is a shortened form of a word or phrase.&lt;/p&gt;</td>
+				<td>An abbreviation (<ruby><rb>abbr</rb><rt>əˈbriːviːˌeɪʃ(ə)n</rt></ruby>) is a shortened form of a word or phrase.<sup>1</sup></td>
+			  </tr>
+			  <tr>
+				<td>69</td>
+				<td>&lt;s&gt;</td>
+				<td></td>
+				<td>Strikethrough text</td>
+				<td>&lt;p&gt;This is &lt;s&gt;old&lt;/s&gt; new text.&lt;/p&gt;</td>
+				<td>This is <s>old</s> new text.</td>
+			  </tr>
+			  <tr>
+				<td>70</td>
+				<td>&lt;script&gt;</td>
+				<td>src, type, async, defer, crossorigin, integrity, text</td>
+				<td>Script statements</td>
+				<td>&lt;script src="script.js"&gt;&lt;/script&gt;</td>
+				<td>The script in script.js will be executed.<sup>2</sup></td>
+			  </tr>
     </table>
 </body>
 </html>
