Added items number 71 to 80

--- a/index.html
+++ b/index.html
@@ -824,6 +824,125 @@
 				<td>&lt;script src="script.js"&gt;&lt;/script&gt;</td>
 				<td>The script in script.js will be executed.<sup>2</sup></td>
 			  </tr>
+              <tr>
+				<td>71</td>
+				<td>&lt;section&gt;</td>
+				<td>accesskey,
+					class,
+					contenteditable,
+					contextmenu,
+					dir,
+					draggable,
+					hidden,
+					id,
+					lang,
+					spellcheck,
+					style,
+					tabindex,
+					titleid<br>class</td>
+				<td>Any string</td>
+				<td>&lt;section id="section1" class="section"&gt;<br>...<br>&lt;/section&gt;</td>
+				<td>Section content goes here...</td>
+			</tr>
+			<tr>
+				<td>72</td>
+				<td>&lt;small&gt;</td>
+				<td>N/A</td>
+				<td>Any string</td>
+				<td>&lt;small&gt;Small text&lt;/small&gt;</td>
+				<td><small>Small text</small></td>
+			</tr>
+			<tr>
+				<td>73</td>
+				<td>&lt;source&gt;</td>
+				<td>src<br>type</td>
+				<td>URL<br>MIME type</td>
+				<td>&lt;video&gt;<br>&lt;source src="movie.mp4" type="video/mp4"&gt;<br>&lt;/video&gt;</td>
+				<td>N/A</td>
+			</tr>
+			<tr>
+				<td>74</td>
+				<td>&lt;span&gt;</td>
+				<td>N/A</td>
+				<td>Any string</td>
+				<td>&lt;span&gt;Some text&lt;/span&gt;</td>
+				<td><span>Some text</span></td>
+			</tr>
+			<tr>
+				<td>75</td>
+				<td>&lt;strong&gt;</td>
+				<td>-</td>
+				<td>Text</td>
+				<td>&lt;strong&gt;Text&lt;/strong&gt;</td>
+				<td><strong>Text</strong></td>
+			</tr>
+			<tr>
+				<td>76</td>
+				<td>&lt;style&gt;</td>
+				<td>type, media, scoped</td>
+				<td>CSS code</td>
+				<td>&lt;style type="text/css"&gt;CSS code&lt;/style&gt;</td>
+				<td>Displayed CSS code</td>
+			</tr>
+			<tr>
+				<td>77</td>
+				<td>&lt;sub&gt;</td>
+				<td>-</td>
+				<td>Text</td>
+				<td>&lt;sub&gt;H<sub>2</sub>O&lt;/sub&gt;</td>
+				<td>H<sub>2</sub>O</td>
+			</tr>
+			<tr>
+				<td>78</td>
+				<td>&lt;sup&gt;</td>
+				<td>-</td>
+				<td>Text</td>
+				<td>&lt;sup&gt;2&lt;/sup&gt;</td>
+				<td>r<sup>2</sup></td>
+			</tr>
+			<tr>
+				<td>79</td>
+				<td>&lt;table&gt;</td>
+				<td>border,
+					cellpadding,
+					cellspacing,
+					width</td>
+				<td>integer<br>pixels<br>pixels<br>percentage/integer</td>
+				<td>&lt;table border="1" cellpadding="5" cellspacing="0" width="%"&gt;<br>...<br>&lt;/table&gt;</td>
+				<td>
+					<table border="1" cellpadding="5" cellspacing="0" width="%">
+						<tr>
+							<td>Row 1, Cell 1</td>
+							<td>Row 1, Cell 2</td>
+						</tr>
+						<tr>
+							<td>Row 2, Cell 1</td>
+							<td>Row 2, Cell 2</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td>80</td>
+				<td>&lt;tbody&gt;</td>
+				<td></td>
+				<td></td>
+				<td>&lt;tbody&gt;<br>...<br>&lt;/tbody&gt;</td>
+				<td>
+					<table border="1" cellpadding="5" cellspacing="0" width="%">
+						<tbody>
+							<tr>
+								<td>Row 1, Cell 1</td>
+								<td>Row 1, Cell 2</td>
+							</tr>
+							<tr>
+								<td>Row 2, Cell 1</td>
+								<td>Row 2, Cell 2</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
     </table>
 </body>
 </html>
