Added final changes

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>HTML Cheat Sheet</title>
+	<meta charset="UTF-8">
+	<title>HTML Cheat Sheet</title>
+	<link rel="stylesheet" href="sytle.css">
 </head>
 <body>
-    <!-- Created by Hafizullah Rasa -->
+	<!-- Created by Hafizullah Rasa -->
 	<h1 class="title">HTML Cheat Sheet</h1>
 	<table>
 		<tr>
 			<th>Full Name</th>
+			<th>Class</th>
+			<th>Teacher</th>
 		</tr>
 		<tr>
 			<td class="details">Hafizullah Rasa</td>
+			<td class="details">SE 5th Semester</td>
+			<td class="details">Sayed Najmuddin Sadat</td>
 		</tr>
 	</table>
-    <table>
-        <tr>
+	<table>
+		<tr>
 			<th>Number</th>
 			<th>Tag</th>
 			<th>Attribute(s)</th>
@@ -35,7 +37,7 @@
 			<td>&lt;html&gt;...&lt;/html&gt;</td>
 			<td><!DOCTYPE html><html>...content...</html></td>
 		</tr>
-        <tr>
+		<tr>
 			<td>2</td>
 			<td>&lt;head&gt;</td>
 			<td></td>
@@ -107,7 +109,7 @@
 			<td>&lt;h4&gt;Heading Text&lt;/h4&gt;</td>
 			<td><h4>Heading Text</h4></td>
 		</tr>
-        <tr>
+		<tr>
 			<td>11</td>
 			<td>&lt;h5&gt;</td>
 			<td></td>
@@ -211,7 +213,7 @@
 			<td>&lt;aside&gt;Aside content&lt;/aside&gt;</td>
 			<td><aside>Aside content</aside></td>
 		</tr>
-        <tr>
+		<tr>
 			<td>21</td>
 			<td>&lt;area&gt;</td>
 			<td>shape, coords, href, alt</td>
@@ -321,7 +323,7 @@
 			<td>&lt;center&gt;Centered text&lt;/center&gt;</td>
 			<td><center>Centered text</center></td>
 		</tr>
-        <tr>
+		<tr>
 			<td>31</td>
 			<td>&lt;code&gt;</td>
 			<td></td>
@@ -482,7 +484,7 @@
 			<td>&lt;div id="example" class="example" style="color: blue;" title="Example"&gt;Block-level container&lt;/div&gt;</td>
 			<td><div id="example" class="example" style="color: blue;" title="Example">Block-level container</div></td>
 		  </tr>
-          <tr>
+		  <tr>
 			<td>41</td>
 			<td>&lt;dialog&gt;</td>
 			<td>open</td>
@@ -586,7 +588,7 @@
 				<td>&lt;i&gt;This text is italicized&lt;/i&gt;</td>
 				<td><i>This text is italicized</i></td>
 			</tr>
-            <tr>
+			<tr>
 				<td>51</td>
 				<td>&lt;iframe&gt;</td>
 				<td>
@@ -732,7 +734,7 @@
 				<td>&lt;nav&gt;&lt;a href="#"&gt;Link 1&lt;/a&gt;&lt;a href="#"&gt;Link 2&lt;/a&gt;&lt;/nav&gt;</td>
 				<td><nav><a href="#">Link 1</a><a href="#">Link 2</a></nav></td>
 			  </tr>
-              <tr>
+			  <tr>
 				<td>61</td>
 				<td>&lt;object&gt;</td>
 				<td>data, type, width, height, name, usemap, form, class, style, id, tabindex, title, aria-label, aria-labelledby, role</td>
@@ -824,7 +826,7 @@
 				<td>&lt;script src="script.js"&gt;&lt;/script&gt;</td>
 				<td>The script in script.js will be executed.<sup>2</sup></td>
 			  </tr>
-              <tr>
+			  <tr>
 				<td>71</td>
 				<td>&lt;section&gt;</td>
 				<td>accesskey,
@@ -943,7 +945,7 @@
 					</table>
 				</td>
 			</tr>
-            <tr>
+			<tr>
 				<td>81</td>
 				<td>&lt;td&gt;</td>
 				<td>colspan,
@@ -1079,15 +1081,17 @@
 					<video src="video.mp4" width="300" height="180" controls autoplay></video>
 				</td>
 			</tr>
-            <tr>
-                <td>91</td>
-                <td>wbr</td>
-                <td>N/A</td>
-                <td>N/A</td>
-                <td>&lt;p&gt;Hello&lt;wbr&gt;World&lt;/p&gt;</td>
-                <td>HelloWo<r>rl</r>d</td>
-              </tr>
-    </table>
-</body>
-<!-- Created by Hafizullah Rasa -->
+			
+				<tr>
+					<td>91</td>
+					<td>wbr</td>
+					<td>N/A</td>
+					<td>N/A</td>
+					<td>&lt;p&gt;Hello&lt;wbr&gt;World&lt;/p&gt;</td>
+					<td>HelloWo<r>rl</r>d</td>
+				  </tr>
+	</table>
+	<!-- Created by Hafizullah Rasa -->
+	</body>
 </html>
+		
