Fixed the css link issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>HTML Cheat Sheet</title>
-	<link rel="stylesheet" href="sytle.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<!-- Created by Hafizullah Rasa -->
